k8s/fluentd.yml

apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  labels:
    run: fluentd
  name: fluentd
  namespace: kube-system
spec:
  selector:
    matchLabels:
      run: fluentd
  template:
    metadata:
      labels:
        run: fluentd
    spec:
      containers:
      - image: fluent/fluentd-kubernetes-daemonset:v0.12-debian-elasticsearch
        name: fluentd
        volumeMounts:
        - mountPath: /var/log
          name: logs
        - mountPath: /var/lib/docker/containers
          name: containers
        - mountPath: /var/log/journal
          name: journal
        - mountPath: /fluentd/etc
          name: config
      serviceAccount: fluentd
      volumes:
      - configMap:
          defaultMode: 420
          name: fluentd-v1
        name: config
      - hostPath:
          path: /var/log
        name: logs
      - hostPath:
          path: /var/lib/docker/containers
        name: containers
      - hostPath:
          path: /var/log/journal
        name: journal
