k8s/default-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  name: ct2017.phraseapp.io
  namespace: default
spec:
  rules:
  - host: ct2017.phraseapp.io
    http:
      paths:
      - backend:
          serviceName: ct2017
          servicePort: 80
        path: /
  tls:
  - hosts:
    - ct2017.phraseapp.io
    secretName: ct2017.phraseapp.io
