k8s/prometheus.yml
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    kubernetes.io/cluster-service: "true"
    name: prometheus
  name: prometheus
  namespace: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      kubernetes.io/cluster-service: "true"
      run: prometheus
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        kubernetes.io/cluster-service: "true"
        run: prometheus
    spec:
      containers:
      - name: auth
        image: tobstarr/basic-auth-proxy:v2
        ports:
        - containerPort: 80
          protocol: TCP

      - name: prometheus
        image: quay.io/prometheus/prometheus:v1.7.1
        args:
        - -config.file=/etc/prometheus/prometheus.yml
        - -storage.local.path=/prometheus
        - -storage.local.retention=336h
        command:
        - /bin/prometheus
        ports:
        - containerPort: 9090
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - mountPath: /prometheus
          name: data
        - mountPath: /etc/prometheus
          name: config
      serviceAccount: prometheus
      volumes:
      - hostPath:
          path: /data/k8s/prometheus
        name: data
      - configMap:
          name: prometheus-v1
        name: config

---

apiVersion: v1
kind: Service
metadata:
  labels:
    kubernetes.io/cluster-service: "true"
    name: prometheus
  name: prometheus
  namespace: prometheus
spec:
  ports:
  - nodePort: 30551
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    kubernetes.io/cluster-service: "true"
    run: prometheus
  type: NodePort

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  name: prometheus.ct2017.phraseapp.io
  namespace: prometheus
spec:
  rules:
  - host: prometheus.ct2017.phraseapp.io
    http:
      paths:
      - backend:
          serviceName: prometheus
          servicePort: 80
        path: /
  tls:
  - hosts:
    - prometheus.ct2017.phraseapp.io
    secretName: prometheus.ct2017.phraseapp.io
